--- a/login.html
+++ b/login.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Git and Github</title>
+    <title>git  and github</title>
 </head>
 <body>
-    This is git !  
     This gie branch longin.html
 </body>
 </html>
